add my profile page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+  <h1>hey guys what a hell</h1>
+  <!-- 各viewが以下のyieldのところに入る。-->
     <%= yield %>
   </body>
 </html>
+
+
+<!-- ここでは、全てのviewに共通するviewを記載する。　例えばタブを出したり、他の画面と共通の場合はここに記載する。-->
